# rocm-recipes

./: CMakeLists.txt
internal/boost/1.72/: package.txt
internal/boost/1.83/: package.txt
internal/bzip2/: package.txt
internal/bzip2/1.0.8/: package.txt
miopen/boost/1.72/: package.txt
miopen/boost/1.79/: package.txt  requirements.txt
miopen/boost/1.80/: package.txt
miopen/bzip2/: build.cmake  package.txt
miopen/bzip2/1.0.6/: package.txt
miopen/bzip2/1.0.8/: build.cmake  package.txt
miopen/sqlite3/3.17/: package.txt
miopen/sqlite3/3.39.3/: package.txt
miopen/sqlite3/3.43.2/: package.txt
miopen/sqlite3/3.49.1/: package.txt
miopen/sqlite3/sqlite3/3.17/: package.txt
miopen/zlib/: package.txt
miopen/zlib/1.2.12/: package.txt
miopen/zlib/1.2.13/: package.txt
miopen/zlib/1.3/: package.txt
recipes/boost/: package.txt
recipes/boost/1.58/: package.txt
recipes/boost/1.72/: package.txt
recipes/boost/1.83/: package.txt
recipes/bzip2/: package.txt
recipes/bzip2/1.0.6/: package.txt
recipes/bzip2/1.0.8/: package.txt
recipes/google/protobuf/: build.cmake
recipes/libressl/: build.cmake
recipes/sqlite3/3.17/: build.cmake
recipes/sqlite3/3.39.3/: build.cmake  package.txt
recipes/sqlite3/3.49.1/: build.cmake  package.txt
recipes/zlib/1.3/: package.txt
